# jax-layers

./: .buildinfo  .gitignore  LICENSE  README.md  example_gemma3.txt  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.cursor/rules/: attention_mechanism__multiheadattention___dot_product_attention_.mdc  baseconfig.mdc  basemodel.mdc  generationmixin.mdc  guide.mdc  llamaforcausallm.mdc  modernbertformaskedlm.mdc  rotary_position_embeddings__rope_.mdc  tokenizer.mdc
.devcontainer/: Dockerfile  README.md  devcontainer.json  verify_jax_cuda.py
.github/workflows/: docs.yml  mypy.yml  ruff.yml  tests.yml
_modules/: index.html
_modules/jax/: numpy.html
_modules/jax_layers/attention/: multi_head_attention.html
_modules/jax_layers/functional/: attention.html
_modules/jax_layers/models/: base.html  generation_utils.html  modernbert.html
_modules/jaxgarden/attention/: multi_head_attention.html
_modules/jaxgarden/functional/: attention.html
_modules/jaxgarden/models/: base.html  gemma2.html  gemma3.html  generation_utils.html  llama.html  modernbert.html
docs/: conf.py  index.rst  make.bat
docs/modules/: index.rst
examples/: __init__.py  gemma2_inference_example.py  gemma3_inference_example.py  llama_inference_example.py  multi_head_attention_example.py  nanogpt_example.py  t5_inference_example.py
jax_layers/: __init__.py
jax_layers/attention/: __init__.py  multi_head_attention.py
jax_layers/functional/: __init__.py
jax_layers/models/: __init__.py  base.py  generation_utils.py  modernbert.py
jax_layers/nanogpt/: __init__.py  config.py  data.py  model.py  train.py
jaxgarden/: __init__.py  tokenization.py
jaxgarden/attention/: __init__.py  multi_head_attention.py  rope_multi_head_attention.py
jaxgarden/functional/: __init__.py  attention.py  mixture_of_experts.py
jaxgarden/models/: __init__.py  base.py  gemma2.py  gemma3.py  generation_utils.py  llama.py  modernbert.py  t5.py
modules/: index.html
tests/: run_tests.py  test_modernbert.py  test_multi_head_attention.py
tests/attention/: test_RoPEMultiHeadAttention.py  test_multi_head_attention.py
tests/functional/: test_MoE.py  test_attention.py
tests/models/: test_base.py  test_gemma2.py  test_gemma3.py  test_generation_utils.py  test_llama.py  test_modernbert.py  test_t5.py
